--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -6,7 +6,7 @@
     >
     
     <TextView 
-    	android:id="@+id/label" 
+    	android:id="@+id/model_id" 
     	android:layout_width="wrap_content" 
     	android:layout_height="wrap_content" 
     	android:layout_alignParentTop="true" 
@@ -19,6 +19,20 @@
     	android:layout_centerVertical="true"
     	/>
     
+     <TextView 
+    	android:id="@+id/label" 
+    	android:layout_width="wrap_content" 
+    	android:layout_height="wrap_content" 
+    	android:layout_alignParentTop="true" 
+    	android:layout_toRightOf="@id/model_id" 
+    	android:layout_marginLeft="10dp" 
+    	android:layout_marginBottom="10dp" 
+    	android:layout_marginTop="10dp" 
+    	android:textSize="20sp"
+    	android:textColor="#929497"
+    	android:layout_centerVertical="true"
+    	/>
+     
     <CheckBox 
     	android:id="@+id/checkbox" 
     	android:layout_width="wrap_content" 
