--- a/res/layout/points_layout.xml
+++ b/res/layout/points_layout.xml
@@ -23,25 +23,10 @@
         android:layout_height="wrap_content"
         android:text="edit_sel" />
 
-    <LinearLayout
+    <ListView
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="2" >
-
-        <ListView
-            android:id="@+id/list_view"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" >
-        </ListView>
-
-        <ListView
-            android:id="@+id/list_view2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" >
-        </ListView>
-    </LinearLayout>
+        android:layout_height="match_parent" >
+    </ListView>
 
 </LinearLayout>
