dodanie punktu - 2 opcje (sensor i manual)

--- a/res/layout/point_insert_dialog_layout.xml
+++ b/res/layout/point_insert_dialog_layout.xml
@@ -1,26 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/insert_point_before"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal" />
-    
-    <EditText
-        android:id="@+id/insert_point_after"
+        android:layout_marginLeft="7dp" >
+
+        <TextView
+            android:id="@+id/txt1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/before"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="70dp"
+            android:text=""
+            android:textColor="@android:color/white" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/insert_point_before"
-        android:inputType="numberDecimal" />
-<!--     
+        android:layout_marginLeft="7dp" >
+
+        <CheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/insert_point_before"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="70dp"
+            android:enabled="false"
+            android:inputType="numberDecimal" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="7dp" >
+
+        <TextView
+            android:id="@+id/txt2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/after"
+            android:textColor="@android:color/white" />
+
+        <EditText
+            android:id="@+id/insert_point_after"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="70dp"
+            android:inputType="numberDecimal" />
+    </RelativeLayout>
+
+    <!--
     <EditText
         android:id="@+id/insert_point_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/insert_point_after"
         android:inputType="number" />
- -->
-</RelativeLayout>
+    -->
+
+</LinearLayout>
