--- a/res/layout/main_layout.xml
+++ b/res/layout/main_layout.xml
@@ -5,27 +5,41 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
+    <Button
+        android:id="@+id/open_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Kalibracja" />
+    
     <LinearLayout
         android:id="@+id/layout_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:weightSum="2"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/txt_1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_gravity="center"
-            android:text="odczyt: " />
+            android:textSize="20sp"
+            android:text="	Odczyt: " />
 
         <TextView
             android:id="@+id/txt_curr"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_gravity="center"
             android:text="" />
     </LinearLayout>
-
+<!-- 
     <LinearLayout
         android:id="@+id/layout_2"
         android:layout_width="match_parent"
@@ -46,22 +60,21 @@
             android:layout_gravity="center"
             android:text="" />
     </LinearLayout>
-
+-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bierząca kalibracja:" />
+        android:layout_marginLeft="5dp"
+        android:textSize="20sp"
+        android:text="Wybrana kalibracja:" />
 
     <TextView
         android:id="@+id/calibrate_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:text="brak" />
-
-    <Button
-        android:id="@+id/open_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="open" />
 
 </LinearLayout>
