--- a/res/layout/point_edit_dialog_layout.xml
+++ b/res/layout/point_edit_dialog_layout.xml
@@ -13,7 +13,7 @@
             android:id="@+id/txt1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/after"
+            android:text="@string/before"
             android:textColor="@android:color/white" />
 
         <EditText
