--- a/res/layout/point_list_item.xml
+++ b/res/layout/point_list_item.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:weightSum="5"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:descendantFocusability="blocksDescendants"
     >
     
-    <TextView 
+<!--     <TextView 
     	android:id="@+id/point_id" 
     	android:layout_width="wrap_content" 
     	android:layout_height="wrap_content" 
@@ -18,36 +22,28 @@
     	android:textColor="#929497"
     	android:layout_centerVertical="true"
     	/>
-    
+ -->    
      <TextView 
     	android:id="@+id/before" 
-    	android:layout_width="wrap_content" 
+    	android:layout_width="0dp" 
     	android:layout_height="wrap_content" 
-    	android:layout_alignParentTop="true" 
-    	android:layout_toRightOf="@id/point_id" 
-    	android:layout_marginLeft="10dp" 
-    	android:layout_marginBottom="10dp" 
-    	android:layout_marginTop="10dp" 
+    	android:layout_weight="2"
+    	android:gravity="center"
     	android:textSize="20sp"
     	android:textColor="#929497"
-    	android:layout_centerVertical="true"
     	/>
      
       <TextView 
     	android:id="@+id/after" 
-    	android:layout_width="wrap_content" 
+    	android:layout_width="0dp" 
     	android:layout_height="wrap_content" 
-    	android:layout_alignParentTop="true" 
-    	android:layout_toRightOf="@id/before" 
-    	android:layout_marginLeft="10dp" 
-    	android:layout_marginBottom="10dp" 
-    	android:layout_marginTop="10dp" 
+    	android:layout_weight="2"
+    	android:gravity="center"
     	android:textSize="20sp"
     	android:textColor="#929497"
-    	android:layout_centerVertical="true"
     	/>
       
-       <TextView 
+<!--        <TextView 
     	android:id="@+id/calibration_id" 
     	android:layout_width="wrap_content" 
     	android:layout_height="wrap_content" 
@@ -60,17 +56,24 @@
     	android:textColor="#929497"
     	android:layout_centerVertical="true"
     	/>
-     
-    <CheckBox 
-    	android:id="@+id/checkbox" 
-    	android:layout_width="wrap_content" 
-    	android:layout_height="wrap_content" 
-    	android:layout_alignParentRight="true"
-    	android:layout_marginRight="20dp" 
-    	android:textSize="20sp"
-    	android:textColor="#929497"
-    	android:clickable="false"
-    	android:layout_centerVertical="true"
-    	/>
+-->     
+
+	<RelativeLayout 
+	    android:layout_width="0dp" 
+    	android:layout_height="wrap_content"
+    	android:layout_weight="1" 
+    	android:gravity="center">
     	
-</RelativeLayout>
+    	<CheckBox 
+    		android:id="@+id/checkbox" 
+    		android:layout_width="wrap_content" 
+    		android:layout_height="wrap_content"    		
+    		android:textSize="20sp"
+    		android:textColor="#929497"
+    		android:clickable="false" />
+    	
+	</RelativeLayout>
+
+   
+    	
+</LinearLayout>
