--- a/res/layout/points_layout.xml
+++ b/res/layout/points_layout.xml
@@ -22,7 +22,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/edit_point" />
-
+    
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:orientation="horizontal"
+        android:weightSum="5" >
+    	
+    	<TextView 
+        	android:layout_width="0dp"
+        	android:layout_height="wrap_content" 
+        	android:layout_weight="2"
+        	android:text="Wartość:"/>
+    	
+    	<TextView 
+        	android:layout_width="0dp"
+        	android:layout_height="wrap_content" 
+        	android:layout_weight="2"
+        	android:text="Kalibracja:"/>
+    	
+    	<TextView 
+        	android:layout_width="0dp"
+        	android:layout_height="wrap_content" 
+        	android:layout_weight="1"
+        	android:text=""/>
+    	
+	</LinearLayout>
+    
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
